修正 chrome layout bug

--- a/src/css/structures/_palette.sass
+++ b/src/css/structures/_palette.sass
@@ -25,6 +25,7 @@
   height: 100%
   display: flex
   flex-direction: column
+  overflow: hidden
 
 // -------------------------------------
 //   Modifiers
